add security and active directory configuration