@@ -1,43 +1,43 @@
 package com.worldcup.bean;
 
+import com.worldcup.model.Group;
+import com.worldcup.model.Team;
+import com.worldcup.service.GroupService;
 import jakarta.enterprise.context.RequestScoped;
+import jakarta.inject.Inject;
 import jakarta.inject.Named;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
+
+import java.util.stream.Collectors;
 
 /**
  * Manages World Cup groups and their teams.
- * Provides group data for display and navigation.
- * This bean is UI-only; groups are derived from match data in services.
+ * Loads dynamic data from the database.
  */
 @Named
 @RequestScoped
 public class GroupsBean {
 
-    /**
-     * World Cup 2026 Groups with teams
-     * Data is static and serves for UI organization only.
-     */
-    private static final Map<String, List<String>> GROUPS = Map.ofEntries(
-        Map.entry("A", Arrays.asList("🇶🇦 Qatar", "🇪🇨 Ecuador", "🇸🇳 Senegal", "🇳🇱 Netherlands")),
-        Map.entry("B", Arrays.asList("🏴 England", "🇺🇸 USA", "🏴 Wales", "🇮🇷 Iran")),
-        Map.entry("C", Arrays.asList("🇦🇷 Argentina", "🇸🇦 Saudi Arabia", "🇲🇽 Mexico", "🇵🇱 Poland")),
-        Map.entry("D", Arrays.asList("🇫🇷 France", "🇩🇪 Germany", "🇪🇸 Spain", "🇯🇵 Japan"))
-    );
+    @Inject
+    private GroupService groupService;
+
+    public List<Group> getAllGroups() {
+        return groupService.getAllGroups();
+    }
 
     public List<String> getGroupNames() {
-        return Arrays.asList("A", "B", "C", "D");
+        return groupService.getAllGroups().stream()
+                .map(Group::getName)
+                .collect(Collectors.toList());
     }
 
-    public List<String> getTeamsByGroup(String groupName) {
-        return GROUPS.getOrDefault(groupName, Collections.emptyList());
-    }
-
-    public Map<String, List<String>> getAllGroups() {
-        return GROUPS;
+    public List<Team> getTeamsByGroup(String groupName) {
+        return groupService.getAllGroups().stream()
+                .filter(g -> g.getName().equals(groupName))
+                .findFirst()
+                .map(Group::getTeams)
+                .orElse(List.of());
     }
 
     public String normalizeTeamName(String displayName) {
